--- a/train_setup.ipynb
+++ b/train_setup.ipynb
@@ -226,12 +226,17 @@
     "\n",
     "``` bash\n",
     "# run on node-mltrain\n",
-    "HOST_IP=$(curl --silent http://169.254.169.254/latest/meta-data/public-ipv4 )\n",
+    "HOST_IP=$(curl --silent http://169.254.169.254/latest/meta-data/public-ipv4)\n",
     "\n",
     "docker run -d --rm -p 8888:8888 \\\n",
     "  -v ~/ChXpert-Chest-X-rays-Prediction/:/home/jovyan/work/ \\\n",
-    "  --mount type=bind,source=/mnt/object,target=/mnt/ \\\n",
+    "  --mount type=bind,source=/mnt/object,target=/mnt/data \\\n",
     "  -e RAY_ADDRESS=http://${HOST_IP}:8265/ \\\n",
+    "  -e MLFLOW_TRACKING_URI=http://$129.114.26.91:8000 \\\n",
+    "  -e MLFLOW_S3_ENDPOINT_URL=http://$129.114.26.91:9000 \\\n",
+    "  -e AWS_ACCESS_KEY_ID=myminioadmin \\\n",
+    "  -e AWS_SECRET_ACCESS_KEY=myminioadmin123 \\\n",
+    "  -e RAY_AWS_STORAGE_ENDPOINT=http://129.114.26.91:9000 \\\n",
     "  --name jupyter \\\n",
     "  jupyter-ray\n",
     "```\n",
