local data changes

--- a/train_setup.ipynb
+++ b/train_setup.ipynb
@@ -198,11 +198,75 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc9f7937",
+   "metadata": {},
+   "source": [
+    "``` bash\n",
+    "# run on node-mltrain\n",
+    "docker build -t jupyter-ray -f ChXpert-Chest-X-rays-Prediction/docker/Dockerfile.jupyter-ray .\n",
+    "```\n",
+    "\n",
+    "Run\n",
+    "\n",
+    "``` bash\n",
+    "# run on node-mltrain\n",
+    "HOST_IP=$(curl --silent http://169.254.169.254/latest/meta-data/public-ipv4)\n",
+    "\n",
+    "docker run -d --rm -p 8888:8888 \\\n",
+    "  -v ~/ChXpert-Chest-X-rays-Prediction/:/home/jovyan/work/ \\\n",
+    "  --mount type=bind,source=/mnt/object,target=/mnt/data \\\n",
+    "  -e RAY_ADDRESS=http://${HOST_IP}:8265/ \\\n",
+    "  --name jupyter \\\n",
+    "  jupyter-ray\n",
+    "```\n",
+    "\n",
+    "Then, run\n",
+    "\n",
+    "``` bash\n",
+    "# run on node-mltrain\n",
+    "docker logs jupyter\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5232d1fd",
    "metadata": {},
    "source": [
     "HOST_IP=$(curl --silent http://169.254.169.254/latest/meta-data/public-ipv4 ) MINIO_ROOT_USER=myminioadmin MINIO_ROOT_PASSWORD=myminioadmin123 AWS_ACCESS_KEY_ID=myminioadmin AWS_SECRET_ACCESS_KEY=myminioadmin123 POSTGRES_USER=mlflowuser POSTGRES_PASSWORD=mlflowpass POSTGRES_DB=mlflowdb docker compose -f  ChXpert-Chest-X-rays-Prediction/docker/docker-compose-ray-cuda-req.yaml down"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5fbe022",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1708aba8",
+   "metadata": {},
+   "source": [
+    "## run in bare metal instance local \n",
+    "\n",
+    "HOST_IP=$(curl --silent http://169.254.169.254/latest/meta-data/public-ipv4 ) MINIO_ROOT_USER=myminioadmin MINIO_ROOT_PASSWORD=myminioadmin123 AWS_ACCESS_KEY_ID=myminioadmin AWS_SECRET_ACCESS_KEY=myminioadmin123 POSTGRES_USER=mlflowuser POSTGRES_PASSWORD=mlflowpass POSTGRES_DB=mlflowdb docker compose -f  ChXpert-Chest-X-rays-Prediction/docker/docker-compose-ray-cuda-local.yaml up -d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ea8a32e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81954dac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -230,7 +294,7 @@
     "\n",
     "docker run -d --rm -p 8888:8888 \\\n",
     "  -v ~/ChXpert-Chest-X-rays-Prediction/:/home/jovyan/work/ \\\n",
-    "  --mount type=bind,source=/mnt/object,target=/mnt/data \\\n",
+    "  --mount type=bind,source=/home/cc/data,target=/mnt/data \\\n",
     "  -e RAY_ADDRESS=http://${HOST_IP}:8265/ \\\n",
     "  --name jupyter \\\n",
     "  jupyter-ray\n",
