--- a/train_setup.ipynb
+++ b/train_setup.ipynb
@@ -256,6 +256,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd28d477",
+   "metadata": {},
+   "source": [
+    "HOST_IP=$(curl --silent http://169.254.169.254/latest/meta-data/public-ipv4 ) MINIO_ROOT_USER=myminioadmin MINIO_ROOT_PASSWORD=myminioadmin123 AWS_ACCESS_KEY_ID=myminioadmin AWS_SECRET_ACCESS_KEY=myminioadmin123 POSTGRES_USER=mlflowuser POSTGRES_PASSWORD=mlflowpass POSTGRES_DB=mlflowdb docker compose -f  ChXpert-Chest-X-rays-Prediction/docker/docker-compose-ray-cuda-local.yaml down"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ea8a32e",
    "metadata": {},
    "source": []
