--- a/train_setup.ipynb
+++ b/train_setup.ipynb
@@ -171,7 +171,7 @@
     "replace object name\n",
     "\n",
     "\n",
-    "rclone mount chi_tacc:object-persist-project29 /mnt/object --read-only --allow-other --daemon\n",
+    "rclone mount chi_tacc:object-persist-project29 /mnt/object --read-only --allow-other --vfs-cache-mode=full   --dir-cache-time=72h --swift-fetch-until-empty-page --daemon\n",
     "\n",
     "ls /mnt/object"
    ]
