--- a/ray_work/get_filenames.ipynb
+++ b/ray_work/get_filenames.ipynb
@@ -54,6 +54,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bc83c1a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "# Enable tqdm’s pandas integration\n",
+    "tqdm.pandas()\n",
+    "\n",
+    "# Dataset base dirs\n",
+    "base_dirs = [\n",
+    "    \"/mnt/data/CheXpert-v1.0 batch 2 (train 1)\",\n",
+    "    \"/mnt/data/CheXpert-v1.0 batch 3 (train 2)\",\n",
+    "    \"/mnt/data/CheXpert-v1.0 batch 4 (train 3)\"\n",
+    "]\n",
+    "\n",
+    "# Read your CSV\n",
+    "df = pd.read_csv(\"/mnt/data/train_cheXbert.csv\")\n",
+    "\n",
+    "# Extract relative path from 'Path'\n",
+    "df[\"relative_path\"] = df[\"Path\"].apply(lambda p: \"/\".join(p.split(\"/\")[2:]))\n",
+    "\n",
+    "# Resolver with no changes\n",
+    "def resolve_path(rel_path):\n",
+    "    for base in base_dirs:\n",
+    "        full_path = os.path.join(base, rel_path)\n",
+    "        if os.path.exists(full_path):\n",
+    "            return full_path\n",
+    "    return np.nan\n",
+    "\n",
+    "# Apply with progress bar\n",
+    "df[\"corrected_path\"] = df[\"relative_path\"].progress_apply(resolve_path)\n",
+    "\n",
+    "# Drop missing files\n",
+    "filtered_df = df.dropna(subset=[\"corrected_path\"]).drop(columns=[\"relative_path\"])\n",
+    "\n",
+    "# (Optional) Save\n",
+    "filtered_df.to_csv(\"filtered_chexpert_paths.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "1e85b888-8596-4641-bcda-777a1497f30a",
    "metadata": {},
